Polish updates Remove Selawik, it looks jarringly bad on iOS (mainly the a's). Switch to a native font stack, attempting to use each platform's work-horse font. Had to fix Segoe UI's font weights to do this, just took code from WinJS. Switched to a high res logo.png for retina screens. Compressed it. Made the PC row's image go 100% width on narrow screens. Switch to 3% left/right margins on narrow screens (felt too wide on an iPhone with 24px margins)

--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -1,78 +1,71 @@
-$font-path: "../assets/fonts/selawik";
-
+//
+// Explicitly define a Segoe UI font-family so that we can assign Segoe UI
+// Semilight to an appropriate font-weight.
+// from https://github.com/winjs/winjs/blob/master/src/less/font-definitions.less
+//
 @font-face {
-    font-family: "Selawik";
-    src: url("#{$font-path}/selawk.eot");
-    src: url("#{$font-path}/selawk.eot#iefix") format("embedded-opentype"),
-         url("#{$font-path}/selawk.ttf") format("truetype");
+    font-family: "Segoe UI";
+    font-weight: 200;
+    src: local("Segoe UI Light");
 }
-
 @font-face {
-    font-family: "Selawik Bold";
-    src: url("#{$font-path}/selawkb.eot");
-    src: url("#{$font-path}/selawkb.eot#iefix") format("embedded-opentype"),
-         url("#{$font-path}/selawkb.ttf") format("truetype");
+    font-family: "Segoe UI";
+    font-weight: 300;
+    src: local("Segoe UI Semilight");
 }
-
 @font-face {
-    font-family: "Selawik Light";
-    src: url("#{$font-path}/selawkl.eot");
-    src: url("#{$font-path}/selawkl.eot#iefix") format("embedded-opentype"),
-         url("#{$font-path}/selawkl.ttf") format("truetype");
+    font-family: "Segoe UI";
+    font-weight: 400;
+    src: local("Segoe UI");
 }
-
 @font-face {
-    font-family: "Selawik Semibold";
-    src: url("#{$font-path}/selawksb.eot");
-    src: url("#{$font-path}/selawksb.eot#iefix") format("embedded-opentype"),
-         url("#{$font-path}/selawksb.ttf") format("truetype");
+    font-family: "Segoe UI";
+    font-weight: 500;
+    src: local("Segoe UI Semibold");
 }
-
 @font-face {
-    font-family: "Selawik Semilight";
-    src: url("#{$font-path}/selawksl.eot");
-    src: url("#{$font-path}/selawksl.eot#iefix") format("embedded-opentype"),
-         url("#{$font-path}/selawksl.ttf") format("truetype");
+    font-family: "Segoe UI";
+    font-weight: 600;
+    src: local("Segoe UI Bold");
+}
+@font-face {
+    font-family: "Segoe UI";
+    font-style: italic;
+    font-weight: 400;
+    src: local("Segoe UI Italic");
+}
+@font-face {
+    font-family: "Segoe UI";
+    font-style: italic;
+    font-weight: 700;
+    src: local("Segoe UI Bold Italic");
 }
 
-@mixin font-family_regular() {
-    font-family: "Segoe UI", "Selawik", Tahoma, Verdana, Arial, sans-serif;
-}
-
-@mixin font-family_light() {
-    font-family: "Segoe UI Light", "Selawik Light", Tahoma, Verdana, Arial, sans-serif;
-}
-
-@mixin font-family_semibold() {
-    font-family: "Segoe UI Semibold", "Selawik Semibold", Tahoma, Verdana, Arial, sans-serif;
-}
+// Attempt to use each platform's native font
+$native-font-family: "Segoe UI", -apple-system, BlinkMacSystemFont, "San Francisco", "Roboto", "Helvetica Neue", "Lucida Grande", sans-serif;
 
 @mixin type-t1() {
-    @include font-family_light();
     font-size: 62px;
-    font-weight: normal;
+    font-weight: 200;
     line-height: 72px;
 }
 
 @mixin type-t2() {
-    @include font-family_light();
     font-size: 46px;
-    font-weight: normal;
+    font-weight: 200;
     line-height: 56px;
 }
 
 @mixin type-t3() {
-    @include font-family_light();
     font-size: 34px;
-    font-weight: normal;
+    font-weight: 200;
     line-height: 40px;
 }
 
 @mixin type-t4() {
-    @include font-family_light();
-    font-size: 26px;
-    font-weight: normal;
-    line-height: 32px;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 28px;
 }
 
 @mixin type-secondary() {
